tests/errors/examples/string_where_boolean_expected.vg
<!-- Expected Error: Type mismatch - expected boolean, got string
     Context: String value used where boolean is expected
     
     The boolean() function expects a boolean as first argument, but name is a string.
-->
<view name="test">
  <div>
    <div>{name}</div>
    <div className={boolean(name, "yes", "no")}>Test</div>
  </div>
</view>
